# networking-ipvs

./: DESIGN  MANIFEST.in  README.rst  requirements.txt  setup.cfg  tox.ini
etc/neutron/rootwrap.d/: networking-ipvs.filters
etc/oslo-config-generator/: networking_ipvs_agent.ini
networking_ipvs/: _i18n.py  opts.py  plugin.py  version.py
networking_ipvs/agent/: agent.py  agent_manager.py
networking_ipvs/common/: config.py  constants.py  exceptions.py  keystone.py  rpc.py  template.py  utils.py
networking_ipvs/db/: models.py  networking_ipvs_db.py  quotas.py  revisions.py  utils.py
networking_ipvs/db/migration/alembic_migrations/: env.py
networking_ipvs/db/migration/alembic_migrations/versions/: HEAD  init.py
networking_ipvs/db/migration/alembic_migrations/versions/mitaka/expand/: 7ed83f5168d_add_quotas.py
networking_ipvs/drivers/common/: nic_driver.py  revision.py  utils.py
networking_ipvs/drivers/keepalived/: keepalived_driver.py  utils.py
networking_ipvs/drivers/keepalived/templates/: __init__.py  keepalived_conf.j2  keepalived_virtualserver.j2
networking_ipvs/extensions/: networkingipvs.py
networking_ipvs/tests/: run_driver_tests.py  run_plugin_tests.py
networking_ipvs/tests/driver/: get_driver.py  test_driver.py
networking_ipvs/tests/driver/keepalived/: base.py  test_keepalived_driver.py
networking_ipvs/tests/plugin/: assert_helper.py  base.py  db_revision_test_get_revisions.py  test_plugin.py
