[metadata]
name = networking-ipvs
summary = IPVS plugin/driver for OpenStack Networking Load Balancing as a Service
description-file =
    README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_ipvs
data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/networking-ipvs.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    networking-ipvs-agent = networking_ipvs.agent.agent:main
neutron.service_plugins =
    networking_ipvs_plugin = networking_ipvs.plugin:NetworkingIPVSPlugin
neutron.db.alembic_migrations =
    networking-ipvs = networking_ipvs.db.migration:alembic_migrations
oslo.config.opts =
    neutron.networking_ipvs = networking_ipvs.opts:list_opts
    neutron.networking_ipvs.agent = networking_ipvs.opts:list_agent_opts
    neutron.networking_ipvs.service = networking_ipvs.opts:list_service_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_ipvs/locale/networking_ipvs.pot

[compile_catalog]
directory = networking_ipvs/locale
domain = networking_ipvs

[update_catalog]
domain = networking_ipvs
output_dir = networking_ipvs/locale
input_file = networking_ipvs/locale/networking_ipvs.pot

[wheel]
universal = 1
